adding doctrack-frontend